test-policies-pass/validating/match-resources/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: match-resources-binding
spec:
  policyName: match-resources
  validationActions: [Deny]
